# REBOT

./: .gitignore  1167069458838327336.txt  Dockerfile  README.md  docker-compose.yml  dockerfile  googlequerytest.json  main.py  pyproject.toml  requirements.txt  system_instruction.txt  test.ipynb  timetable.json  update.sh
.github/workflows/: docker-publish.yml
prompts/: system_instruction.txt
src/: commands.py  config.py  discord_actions.py  google_api.py  main.py  utils.py
src/workers/: gemini.py
system_instruction/: english_teach.txt  system_instruction.txt
system_instruction/backup/: search.txt
