[tool.poetry]
name = "rebot-6"
version = "6.0.1"
description = ""
authors = ["repryty <main@repryty.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
py-cord = "^2.6.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
google-generativeai = "^0.7.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
